# inja

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  IMPLICIT_FALSE_FEATURE.md  LICENSE  README.md  appveyor.yml  appvoyer.yml  meson.build  meson_options.txt  requirements.txt  types.hpp.in
.github/: FUNDING.yml
.github/workflows/: ci.yml  documentation.yml  main.yml  single-include.yml  vsenv.bat
amalgamate/: amalgamate.py  config.json
cmake/: Config.cmake.in  Coveralls.cmake  CoverallsGenerateGcov.cmake
cmake/config/: inja.pc.in  injaBuildConfig.cmake.in  injaConfig.cmake.in
doc/: Doxyfile  support.md
include/: environment.hpp  error.hpp  inja.hpp  meson.build  parsed.hpp  parser.hpp  regex.hpp  renderer.hpp  template.hpp  utils.hpp
include/inja/: StringRef.h  bytecode.hpp  config.hpp  environment.hpp  exceptions.hpp  function_storage.hpp  inja.h  inja.hpp  inja_internal.h  inja_internal.hpp  inja_parser.h  inja_parser.hpp  inja_renderer.h  inja_renderer.hpp  internal.hpp  json.hpp  json_fwd.hpp  lexer.hpp  node.hpp  parser.hpp  polyfill.hpp  renderer.hpp  statistics.hpp  string_view.hpp  template.hpp  throw.hpp  token.hpp  utils.hpp
include/wpi/: AlignOf.h  ArrayRef.h  Compiler.h  SmallString.h  SmallVector.h  StringRef.h
scripts/: clang_tidy.sh  update_single_include.sh
single_include/: inja.hpp  meson.build
single_include/inja/: inja.hpp
src/: environment.cpp  inja.cpp  inja.hpp  inja_parser.cpp  inja_renderer.cpp  parser.cpp  renderer.cpp
src/wpi/: StringRef.cpp
test/: CMakeLists.txt  benchmark.cpp  example.cpp  jinja.py  meson.build  test-common.hpp  test-ensure-array.cpp  test-files.cpp  test-functions.cpp  test-implicit-false.cpp  test-renderer.cpp  test-units.cpp  test.cpp  unit-files.cpp  unit-renderer.cpp  unit-string-helper.cpp  unit.cpp
test/data/: include-both.txt  include.txt  nested.txt  simple.txt
test/data/benchmark/: large_data.json  large_template.txt  medium_template.txt  small_data.json
test/data/error-unknown/: template.txt
test/data/html/: data.json  footer.txt  header.txt  result.txt  template.txt
test/data/html-extend/: base.txt  inter.txt  result.txt  template.txt
test/data/nested/: result.txt  template.txt
test/data/nested-line/: data.json  result.txt  template.txt
test/data/nested-lineEnding/: template.txt
test/data/nested-noNewline/: template.txt
test/data/simple-file/: data.json  result.txt
test/hayai/: hayai_benchmarker.hpp  hayai_compatibility.hpp  hayai_fixture.hpp  hayai_json_outputter.hpp  hayai_test.hpp  hayai_test_result.hpp
test/src/: benchmark.cpp  test  test.cpp  unit-files.cpp  unit-json-helper.cpp  unit-parser.cpp  unit-renderer.cpp  unit-string-helper.cpp
test/src/hayai/: LICENSE.md  hayai.hpp  hayai_clock.hpp  hayai_console_outputter.hpp  hayai_default_test_factory.hpp  hayai_junit_xml_outputter.hpp  hayai_main.hpp  hayai_outputter.hpp  hayai_test_descriptor.hpp  hayai_test_factory.hpp
test/templates/: example.txt
