install_headers(
  'inja/config.hpp',
  'inja/environment.hpp',
  'inja/exceptions.hpp',
  'inja/function_storage.hpp',
  'inja/inja.hpp',
  'inja/lexer.hpp',
  'inja/node.hpp',
  'inja/parser.hpp',
  'inja/renderer.hpp',
  'inja/statistics.hpp',
  'inja/template.hpp',
  'inja/token.hpp',
  'inja/utils.hpp',
  subdir: 'inja'
)
